--- a/package.json
+++ b/package.json
@@ -1,3 +1,5 @@
+
+<script type="text/plain">
 {
   "name": "video-downloader",
   "version": "1.0.0",
@@ -7,6 +9,8 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "fs-extra": "^11.2.0",
     "ytdl-core": "^4.11.0"
   }
 }
+</script>
