--- a/package.json
+++ b/package.json
@@ -8,6 +8,6 @@
   "dependencies": {
     "express": "^4.18.2",
     "fs-extra": "^11.2.0",
-    "ytdl-core": "^4.11.0"
+    "ytdl-core-remastered": "^1.0.2"
   }
 }
