--- a/package.json
+++ b/package.json
@@ -8,6 +8,6 @@
   "dependencies": {
     "express": "^4.18.2",
     "fs-extra": "^11.2.0",
-    "ytdl-core-remastered": "^1.0.2"
+    "ytdl-core": "git+https://github.com/fent/node-ytdl-core.git"
   }
 }
