--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "fs-extra": "^11.2.0",
-    "ytdl-core": "git+https://github.com/fent/node-ytdl-core.git"
+    "ytdl-core": "^4.12.0"
   }
 }
