--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "node server.js"
   },
- "dependencies": {
-  "express": "^4.18.2",
-  "ytdl-core": "^4.11.5"
-}
+  "dependencies": {
+    "express": "^4.18.2",
+    "youtubei.js": "^2.4.0"
+  }
 }
